# agentmemo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml  publish-agentmem.yml  publish.yml
examples/: quickstart.py
npm/: README.md  package.json
src/agentmemo/: knowledge.py  mcp_server.py
src/ai_knot/: __init__.py  _similarity.py  knowledge.py  retriever.py
src/ai_knot/languages/: __init__.py  _lang.py  ar.py  de.py  el.py  en.py  es.py  fi.py  fr.py  it.py  ja.py  pl.py  pt.py  ru.py  tr.py  uk.py  zh.py
tests/: file_invest  test_examples.py  test_knowledge.py  test_language_registry.py  test_mcp_server.py  test_performance.py  test_tokenizer_languages.py
tests/eval/: datasets.py
typosquat/: pyproject.toml
typosquat/agentmem/: __init__.py
