[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem"
version = "0.1.0"
description = "Did you mean agentmemo? This package installs agentmemo."
license = {text = "MIT"}
authors = [{name = "Oleg"}]
requires-python = ">=3.11"
dependencies = ["agentmemo"]

[project.urls]
Homepage = "https://github.com/alsoleg89/agentmemo"

[tool.hatch.build.targets.wheel]
packages = ["agentmem"]
